--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -29,6 +29,9 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ inputs.dotnet-version }}
+        env:
+          DOTNET_CLI_TELEMETRY_OPTOUT: true
+          SKETCH7_NUGET_API_KEY: ${{secrets.NUGET_KEY}}
 
       - name: dotnet restore
         run: dotnet restore
@@ -48,6 +51,13 @@ jobs:
 
       - name: Publish NuGet
         run: |
-          export SKETCH7_NUGET_API_KEY=${{ secrets.NUGET_KEY }}
-
           npm run publish:dev
+
+  deploy:
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Test
+        run: npm test
