--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -39,6 +39,13 @@ jobs:
       - name: dotnet build
         run: dotnet build -c Release
 
+      - name: 'Upload Artifact'
+        if: github.ref == 'refs/heads/feature/reusable-workflow'
+        uses: actions/upload-artifact@v3
+        with:
+          name: all-package
+          retention-days: 1
+
       # - name: Test
       #   run: npm test
 
@@ -59,5 +66,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: all-package # optional else it will download all artifacts
+
       - name: Test
         run: npm test
