--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -44,6 +44,7 @@ jobs:
         with:
           name: all-package
           retention-days: 1
+          path: '**/*'
 
       # - name: Test
       #   run: npm test
