--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -37,7 +37,7 @@ jobs:
         run: dotnet restore
 
       - name: dotnet build
-        run: dotnet build -c Release
+        run: dotnet build -c Release --no-restore
 
       - name: 'Upload Artifact'
         uses: actions/upload-artifact@v3
