--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -24,7 +24,7 @@ jobs:
           DOTNET_CLI_V=$(dotnet --version)
           echo dotnet cli version':' $DOTNET_CLI_V
           echo dotnet requested version':' ${{ inputs.dotnet-version }}
-          echo "::notice:: dotnet cli version 2 $DOTNET_CLI_V"
+          echo "::notice::dotnet cli version 2 $DOTNET_CLI_V"
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v3
         with:
@@ -74,8 +74,8 @@ jobs:
         with:
           name: all-package # optional else it will download all artifacts.
 
-      - name: echo
-        run: ::notice version test $VERSION
+      - name: Print version
+        run: echo "::notice::Package version ${{ github.env.VERSION }}"
 
       - name: Test
         run: npm test
