--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -39,7 +39,7 @@ jobs:
           if ! ([ ${{ github.ref }} = "refs/heads/master" ] || [[ "${{ github.ref }}" =~ ^(([0-9]+|\.)+x)$ ]]); then
           echo "Non-publishable branch; finishing build..."
           # exit 1
-          export PUBLISH=true
+          echo "PUBLISH=true" >> $GITHUB_ENV
           fi
           echo "PUBLISH: $PUBLISH"
 
