change to publish

--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -44,7 +44,7 @@ jobs:
           echo "PUBLISH: $PUBLISH"
 
       - name: Print PUBLISH
-        run: echo "PUBLISH- ${{ github.env.VERSION }}"
+        run: echo "PUBLISH- ${{ github.env.PUBLISH }}"
 
       # - name: dotnet restore
       #   run: dotnet restore
