--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -33,33 +33,34 @@ jobs:
           DOTNET_CLI_TELEMETRY_OPTOUT: true
           SKETCH7_NUGET_API_KEY: ${{secrets.NUGET_KEY}}
 
-      - name: Check if branch is publishable
-        run: |
-          if ! ([ ${{ github.ref }} = "refs/heads/master" ] || [[ "${{ github.ref }}" =~ ^(([0-9]+|\.)+x)$ ]]); then
-          echo "Non-publishable branch; finishing build..."
-          # exit 1
-          PUBLISH=true
-          echo "PUBLISH x1: $PUBLISH"
-          echo "PUBLISH=$PUBLISH" >> $GITHUB_ENV
-          fi
-          echo "PUBLISH x2: $PUBLISH"
-
       # - name: Check if branch is publishable
-      #   id: check-branch
-      #   env:
-      #     BRANCH_NAME: ${{ steps.git.outputs.branch-name}}
       #   run: |
-      #     echo "::notice ::Branch name: $BRANCH_NAME"
-
-      #     if ! ([ $BRANCH_NAME = "master" ] || [ $BRANCH_NAME = "vnext" ] || [[ "$BRANCH_NAME" =~ ^([0-9].*)\.x$ ]]); then
-      #       echo "::set-output name=publishable::false"
-      #       echo "::notice ::Non-publishable branch."
-      #     else 
-      #       echo "::set-output name=publishable::true"
+      #     if ! ([ ${{ github.ref }} = "refs/heads/master" ] || [[ "${{ github.ref }}" =~ ^(([0-9]+|\.)+x)$ ]]); then
+      #     echo "Non-publishable branch; finishing build..."
+      #     # exit 1
+      #     PUBLISH=true
+      #     echo "PUBLISH x1: $PUBLISH"
+      #     echo "PUBLISH=$PUBLISH" >> $GITHUB_ENV
       #     fi
+      #     echo "PUBLISH x2: $PUBLISH"
+
+      - name: Check if branch is publishable
+        id: check-branch
+        env:
+          BRANCH_NAME: ${{ steps.git.outputs.branch-name}}
+        run: |
+          echo "::notice ::Branch name: $BRANCH_NAME"
+
+          if ! ([ $BRANCH_NAME = "master" ] || [ $BRANCH_NAME = "vnext" ] || [[ "$BRANCH_NAME" =~ ^([0-9].*)\.x$ ]]); then
+            echo "::set-output name=publishable::false"
+            echo "::notice ::Non-publishable branch."
+          else 
+            echo "::set-output name=publishable::true"
+          fi
 
       - name: Print PUBLISH
-        run: echo "PUBLISH ${{ env.PUBLISH }} END"
+        # run: echo "PUBLISH ${{ env.PUBLISH }} END"
+        run: echo "PUBLISH ${{ steps.commit.outputs.publishable }} END"
 
       # - name: dotnet restore
       #   run: dotnet restore
@@ -84,9 +85,8 @@ jobs:
 
   deploy:
     needs: build
-    if: ${{ github.env.PUBLISH == 'true' }}
     runs-on: ubuntu-latest
-    
+    if: ${{ github.steps.commit.outputs.publishable == 'true' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
