--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -46,9 +46,10 @@ jobs:
 
       - name: Check if branch is publishable
         id: check-branch
-        env:
-          BRANCH_NAME: ${{ steps.git.outputs.branch-name}}
+        # env:
+        #   BRANCH_NAME: ${{ steps.git.outputs.branch-name}}
         run: |
+          BRANCH_NAME=${{github.head_ref}}
           echo "::notice ::Branch name: $BRANCH_NAME"
 
           if ! ([ $BRANCH_NAME = "master" ] || [ $BRANCH_NAME = "vnext" ] || [[ "$BRANCH_NAME" =~ ^([0-9].*)\.x$ ]]); then
