--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -58,11 +58,11 @@ jobs:
           echo "::notice ::Branch name: $BRANCH_NAME"
 
           if ! ([ $BRANCH_NAME = "refs/heads/master" ] || [ $BRANCH_NAME = "refs/heads/vnext" ] || [[ "$BRANCH_NAME" =~ refs/heads/([0-9].*)\.x$ ]]); then
-            echo "publishable=false" >> $GITHUB_OUTPUT
+            echo "inputs.publishable=false" >> $GITHUB_OUTPUT
             # echo "publishable=false" >> $GITHUB_OUTPUT
             echo "::notice ::Non-publishable branch."
           else 
-          echo "publishable=false" >> $GITHUB_OUTPUT
+          echo "inputs.publishable=false" >> $GITHUB_OUTPUT
           fi
 
       - name: Print PUBLISH
