--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -49,27 +49,28 @@ jobs:
       #     fi
       #     echo "PUBLISH x2: $PUBLISH"
 
-      - name: Check if branch is publishable
-        id: check-branch
-        env:
-          # BRANCH_NAME: ${{ steps.git.outputs.branch-name}}
-          BRANCH_NAME: ${{ github.ref}}
-        run: |
-          echo "::notice ::Branch name: $BRANCH_NAME"
+      # - name: Check if branch is publishable
+      #   id: check-branch
+      #   env:
+      #     # BRANCH_NAME: ${{ steps.git.outputs.branch-name}}
+      #     BRANCH_NAME: ${{ github.ref}}
+      #   run: |
+      #     echo "::notice ::Branch name: $BRANCH_NAME"
 
-          if ! ([ $BRANCH_NAME = "refs/heads/master" ] || [ $BRANCH_NAME = "refs/heads/vnext" ] || [[ "$BRANCH_NAME" =~ refs/heads/([0-9].*)\.x$ ]]); then
-            echo "inputs.publishable=false" >> $GITHUB_OUTPUT
-            # echo "publishable=false" >> $GITHUB_OUTPUT
-            echo "::notice ::Non-publishable branch."
-          else 
-          echo "inputs.publishable=false" >> $GITHUB_OUTPUT
-          fi
+      #     if ! ([ $BRANCH_NAME = "refs/heads/master" ] || [ $BRANCH_NAME = "refs/heads/vnext" ] || [[ "$BRANCH_NAME" =~ refs/heads/([0-9].*)\.x$ ]]); then
+      #       echo "inputs.publishable=false" >> $GITHUB_OUTPUT
+      #       # echo "publishable=false" >> $GITHUB_OUTPUT
+      #       echo "::notice ::Non-publishable branch."
+      #     else 
+      #     echo "inputs.publishable=false" >> $GITHUB_OUTPUT
+      #     fi
 
       - name: Print PUBLISH
         # run: echo "PUBLISH ${{ env.PUBLISH }} END"
         # run: echo "PUBLISH ${{ steps.commit.outputs.publishable }} END"
         # run: echo "PUBLISH ${{ github.outputs.publishable }} END"
-        run: echo "PUBLISH ${{ steps.check-branch.outputs.publishable }} END"
+        # run: echo "PUBLISH ${{ steps.check-branch.outputs.publishable }} END"
+        run: echo "PUBLISH ${{ inputs.publishable }} END"
 
       # - name: dotnet restore
       #   run: dotnet restore
