--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -30,7 +30,7 @@ jobs:
           echo dotnet cli version':' $DOTNET_CLI_V
           echo dotnet input version':' ${{ inputs.dotnet-version }}
           echo "::notice::dotnet cli version 2 $DOTNET_CLI_V"
-      - name: Set up .NET Core
+      - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ inputs.dotnet-version }}
@@ -38,10 +38,10 @@ jobs:
           DOTNET_CLI_TELEMETRY_OPTOUT: true
           SKETCH7_NUGET_API_KEY: ${{secrets.NUGET_KEY}}
 
-      - name: dotnet restore
+      - name: Restore dependencies
         run: dotnet restore
 
-      - name: dotnet build
+      - name: Build
         run: dotnet build -c Release --no-restore
 
       - name: Test
