--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -11,7 +11,7 @@ on:
       publishable:
         description: Whether packages should be deployed to Nuget server
         type: boolean
-        default: ${{ github.ref_name == 'develop' || github.ref_name == 'master' || endsWith(github.ref_name, '.x') || endsWith(github.ref_name, '-workflow') }}
+        default: ${{ github.ref_name == 'develop' || github.ref_name == 'master' || endsWith(github.ref_name, '.x') }} # || endsWith(github.ref_name, '-workflow')
         required: false
 
 jobs:
