--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -31,6 +31,7 @@ jobs:
           echo dotnet cli version':' $DOTNET_CLI_V
           echo dotnet input version':' ${{ inputs.dotnet-version }}
           echo "::notice::dotnet cli version 2 $DOTNET_CLI_V"
+          echo github ref_name: ${{ github.ref_name }}
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
@@ -39,22 +40,22 @@ jobs:
           DOTNET_CLI_TELEMETRY_OPTOUT: true
           SKETCH7_NUGET_API_KEY: ${{secrets.NUGET_KEY}}
 
-      - name: Restore dependencies
-        run: dotnet restore
+      # - name: Restore dependencies
+      #   run: dotnet restore
 
-      - name: Build
-        run: dotnet build -c Release --no-restore
+      # - name: Build
+      #   run: dotnet build -c Release --no-restore
 
-      - name: Test
-        run: npm test
+      # - name: Test
+      #   run: npm test
 
-      - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v3
-        with:
-          name: all-package
-          retention-days: 1
-          path: 
-            /home/runner/work/**/bin/**/*
+      # - name: 'Upload Artifact'
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: all-package
+      #     retention-days: 1
+      #     path: 
+      #       /home/runner/work/**/bin/**/*
 
       - name: Print PUBLISH
         run: echo "Is publishable ${{ inputs.publishable }}"
