--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -39,22 +39,22 @@ jobs:
           DOTNET_CLI_TELEMETRY_OPTOUT: true
           SKETCH7_NUGET_API_KEY: ${{secrets.NUGET_KEY}}
 
-      # - name: Restore dependencies
-      #   run: dotnet restore
+      - name: Restore dependencies
+        run: dotnet restore
 
-      # - name: Build
-      #   run: dotnet build -c Release --no-restore
+      - name: Build
+        run: dotnet build -c Release --no-restore
 
-      # - name: Test
-      #   run: npm test
+      - name: Test
+        run: npm test
 
-      # - name: 'Upload Artifact'
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: all-package
-      #     retention-days: 1
-      #     path: 
-      #       /home/runner/work/**/bin/**/*
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v3
+        with:
+          name: all-package
+          retention-days: 1
+          path: 
+            /home/runner/work/**/bin/**/*
 
       - name: Print PUBLISH
         run: echo "Is publishable ${{ inputs.publishable }}"
