--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -39,6 +39,13 @@ jobs:
           DOTNET_CLI_TELEMETRY_OPTOUT: true
           SKETCH7_NUGET_API_KEY: ${{secrets.NUGET_KEY}}
 
+          # only for testing version
+      - name: Publish NuGet
+        run: |
+          npm run publish:dev
+      - name: Print version
+        run: echo "::notice::Package version ${{ github.env.VERSION }}"
+
       - uses: actions/cache@v3
         with:
           path: ~/.nuget/packages
