--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -35,6 +35,7 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ inputs.dotnet-version }}
+          source-url: https://api.nuget.org/v3/index.json
         env:
           DOTNET_CLI_TELEMETRY_OPTOUT: true
           NUGET_AUTH_TOKEN: ${{ secrets.NUGET_KEY }}
@@ -75,11 +76,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - uses: actions/setup-dotnet@v3
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ inputs.dotnet-version }}
-          source-url: https://api.nuget.org/v3/index.json
         env:
+          DOTNET_CLI_TELEMETRY_OPTOUT: true
           NUGET_AUTH_TOKEN: ${{ secrets.NUGET_KEY }}
 
       - name: Download all workflow run artifacts
