--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -13,6 +13,10 @@ on:
         type: boolean
         default: ${{ contains(fromJSON('["develop", "master", "workflow"]'), github.ref_name) || endsWith(github.ref_name, '.x')  }}
         required: false
+env:
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
+  DOTNET_NOLOGO: true
+  DOTNET_CLI_TELEMETRY_OPTOUT: true
 
 jobs:
   build:
@@ -31,13 +35,14 @@ jobs:
           echo dotnet input version':' ${{ inputs.dotnet-version }}
           echo "::notice::dotnet cli version 2 $DOTNET_CLI_V"
           echo github ref_name: ${{ github.ref_name }}
+          echo S TEST: ${{ secrets.TEST }}
+          echo S TEST_YO: ${{ secrets.TEST_YO }}
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: ${{ inputs.dotnet-version }}
           source-url: https://api.nuget.org/v3/index.json
         env:
-          DOTNET_CLI_TELEMETRY_OPTOUT: true
           NUGET_AUTH_TOKEN: ${{ secrets.NUGET_KEY }}
 
       - uses: actions/cache@v3
@@ -81,7 +86,6 @@ jobs:
         with:
           dotnet-version: ${{ inputs.dotnet-version }}
         env:
-          DOTNET_CLI_TELEMETRY_OPTOUT: true
           NUGET_AUTH_TOKEN: ${{ secrets.NUGET_KEY }}
 
       - name: Download all workflow run artifacts
