--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -43,7 +43,8 @@ jobs:
           dotnet-version: ${{ inputs.dotnet-version }}
           source-url: https://api.nuget.org/v3/index.json
         env:
-          NUGET_AUTH_TOKEN: ${{ secrets.NUGET_KEY }}
+          NUGET_AUTH_TOKEN: "${{ secrets.NUGET_KEY }}"
+          # NUGET_AUTH_TOKEN: ${{ secrets.NUGET_KEY }}
 
       - uses: actions/cache@v3
         with:
