--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -17,7 +17,8 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
-  NUGET_AUTH_TOKEN: ${{ secrets.NUGET_KEY }}
+  # NUGET_AUTH_TOKEN: ${{ secrets.NUGET_KEY }}
+  NUGET_AUTH_TOKEN: "xxx"
 
 jobs:
   build:
