--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -9,7 +9,7 @@ on:
         type: string
         default: '6.0.x'
       publishable:
-        description: Whether packages should be deployed to Nuget server
+        description: Determines whether packages should be published to Nuget
         type: boolean
         default: ${{ contains(fromJSON('["develop", "master", "workflow"]'), github.ref_name) || endsWith(github.ref_name, '.x')  }}
         required: false
@@ -18,11 +18,16 @@ on:
         type: string
         default: 'https://api.nuget.org/v3/index.json'
         required: false
+    secrets:
+      nuget-auth-token:
+        description: Auth token for Nuget
+        required: false
 
 env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: true
+  NUGET_AUTH_TOKEN: ${{ secrets.nuget-auth-token }}
 
 jobs:
   build:
@@ -105,7 +110,7 @@ jobs:
         if: inputs.publishable
         uses: sketch7/version-builder-action@main
         with:
-          preidBranches: "master,refs/heads/feature/reusable-workflow" # todo: remove and use default
+          preid-branches: "master,refs/heads/feature/reusable-workflow" # todo: remove and use default
           # preid: "rc"
 
       # - name: Print version
